# rust_ev_verifier_gui

./: .env  .gitignore  README.md  env.example  package-lock.json  package.json
src/: App.vue
src-tauri/: 2  Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/client/: mod.rs  response.rs
src/components/: ChooseFiles.vue  ChooseOneFile.vue  ChoosePeriod.vue  Log.vue  Main.vue  Reset.vue  Verification.vue  Verifications.vue
src/composables/: useAppData.js  useRunningTasks.js  useTauriCommand.js
src/consts/: appDataProperties.js  appStatus.js  period.js  tauri.js
